--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <body>
     <header class="header">
       <nav class="nav">
-        <img class="nav-logo" src="img/img17.png" alt="Word Counter logo" />
+        <img class="nav-logo" src="img/img19.png" alt="Word Counter logo" />
         <ul class="nav-links">
           <li class="nav-item">
             <a class="nav-link" href="#section-1">Number Of Letters</a>
@@ -53,44 +53,11 @@
         <h2 class="section-description">Number of letters</h2>
         <h3 class="section-header">Count the number of letters.</h3>
       </div>
-      <!-- <div class="numOfLetters">
-</div> -->
-      <!-- <div class="numOfLetters-letters">
-  <div class="numOfletters-icon">
-    <i class='bx bx-calculator'></i>
-     </div>
-     <h5 class="numOfletters-header">100% satisfaction after using the counter.
-    </h5>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla, culpa, quo dolorem explicabo vitae eaque magni inventore iste commodi cum molestias quis recusandae ratione doloremque dolores neque perferendis hic ad.
-    </p>
-  </div> -->
 
-      <!-- <div class="numOfLetters-letters">
-    <div class="numOfletters-icon">
-      <i class='bx bx-check-shield'></i>
-    </div>
-    <h5 class="numOfletters-header">Watch Your Result. </h5>
-    <p>Nulla, culpa, quo dolorem explicabo vitae eaque magni inventore iste commodi cum molestias quis recusandae ratione doloremque dolores neque perferendis hic ad.
-    </p>
-  </div> -->
-      <!-- <img class="numOfLetters-img" src ="img/img7.jpg"/> -->
-      <!-- <img class="numOfLetters-img" src ="img/img12.png"/> -->
-
-      <!-- <div class="numOfLetters-letters">
-    <div class="numOfletters-icon">
-        <i class='bx bx-math'></i>
-        </div>
-        <h5 class="numOfletters-header">See The Number Of Letters. </h5>
-      <p>dolorem explicabo vitae eaque magni inventore iste commodi cum molestias quis recusandae ratione doloremque dolores neque perferendis hic ad.
-      </p>
-</div> -->
-      <!-- </div> -->
-      <!-- <form action="" method ="get"> -->
-      <!-- if you want to secure some information then use post dont use "get" -->
       <form id="myForm" class="form">
         <span class="bg-animate"></span>
         <div class="form-box">
-          <label class="numOfLettersLabel" for="letters">Letters </label>
+          <label class="numOfLettersLabel" for="letters"> Letters </label>
           <input
             class="numOfLettersInput"
             type="text"
@@ -101,12 +68,11 @@
           />
         </div>
         <br />
-        <div>
-          <input class="numOfLettersInput" id="textbox" type="reset" />
+        <div class="inputButtons">
+          <button class="numOfLettersInput" id="textbox">Reset</button>
         </div>
-        <br />
         <div>
-          <input type="submit" id="myBtn" class="btn-text" value="Submit" />
+          <button type="submit" id="myBtn" class="btn-text">Save</button>
         </div>
       </form>
     </section>
